--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering :: Information Analysis"
 ]
-packages = [{ include = "tfunify", from = "src" }]
+packages = [{ include = "tfunify" }]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
@@ -33,6 +33,7 @@ mypy = "^1.10.0"
 ruff = "^0.5.0"
 pytest-cov = "^5.0.0"
 types-setuptools = "*"
+pre-commit = "^3.0.0"
 
 [tool.poetry.scripts]
 tfu = "tfunify.cli:main"
