--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -9,7 +9,7 @@ repository:
   has_projects: false
   has_wiki: false
   has_downloads: true
-  default_branch: main
+  default_branch: develop
 
 # Branch protection rules
 branches:
