--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ pytest-cov = "^5.0.0"
 types-setuptools = "*"
 pre-commit = "^3.0.0"
 
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.0.0"
+sphinx-rtd-theme = "^2.0.0"
+myst-parser = "^2.0.0"
+sphinx-autodoc-typehints = "^1.25.0"
+
 [tool.poetry.scripts]
 tfu = "tfunify.cli:main"
 
