--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,3 +1,14 @@
 target-version = "py310"
 line-length = 100
+
+[lint]
 select = ["E", "F", "I", "UP", "B"]
+ignore = []
+
+[lint.isort]
+known-first-party = ["tfunify"]
+
+[lint.per-file-ignores]
+"examples/*.py" = ["E501","F541","UP035","UP006","B007","B905","I001","F401","UP015"]
+"docs/conf.py" = ["I001"]
+"tests/*.py" = ["I001","E501"]
