--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,10 @@ no_implicit_optional = true
 check_untyped_defs = true
 strict_equality = true
 
+[[tool.mypy.overrides]]
+module = ["yfinance", "yfinance.*"]
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 minversion = "8.0"
 addopts = "-q"
