--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,7 @@ packages = [{ include = "tfunify" }]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 numpy = "^2.0.0"
-
-[tool.poetry.extras]
-yahoo = ["yfinance>=0.2.40"]
+yfinance = { version = ">=0.2.40", extras = ["all"], optional = true }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -34,6 +32,12 @@ ruff = "^0.5.0"
 pytest-cov = "^5.0.0"
 types-setuptools = "*"
 pre-commit = "^3.0.0"
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.0.0"
+sphinx-rtd-theme = "^2.0.0"
+myst-parser = "^2.0.0"
+sphinx-autodoc-typehints = "^1.25.0"
 
 [tool.poetry.scripts]
 tfu = "tfunify.cli:main"
@@ -49,6 +53,10 @@ disallow_incomplete_defs = true
 no_implicit_optional = true
 check_untyped_defs = true
 strict_equality = true
+
+[[tool.mypy.overrides]]
+module = ["yfinance", "yfinance.*"]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 minversion = "8.0"
